thesis: Add new figures

--- a/thesis/sections/results.tex
+++ b/thesis/sections/results.tex
@@ -709,3 +709,11 @@ We therefore make aforementioned assumptions to show that \textit{given} such me
 
 With both stack-pointer related assumptions, \smv{SP_BANK} and \smv{SP_SAFETY}, nuXmv manages to verify that the architecture does not violate integrity information flow properties.
 The same is true for the modification of the architecture where the stack-pointer is selected automatically by the architecture and the assumptions \smv{SP_BANK} and \smv{SP_SAFETY} are dropped.
+
+% TODO: Summary
+
+\begin{figure}
+    \centering
+    \includegraphics[width=\textwidth]{figures/assumptions.png}
+    \caption{Assumptions visualized}
+\end{figure}
