--- a/thesis/sections/checking.tex
+++ b/thesis/sections/checking.tex
@@ -143,3 +143,8 @@ We also will then verify the effectiveness of these rules by re-running the proo
     \caption{Verification Process Flowchart}
     \label{fig:ver-process}
 \end{figure}
+
+% TODO: Use graphic
+\begin{figure}
+    \includegraphics[width=\textwidth]{figures/properties.png}
+\end{figure}
